--- a/locales/fa.yml
+++ b/locales/fa.yml
@@ -65,6 +65,12 @@ accept: |-
 err.accept.not_enough_rights: 💬 شما دسترسی لازم برای اجرای این دستور را ندارید!
 err.accept.chat_not_found: 💬 این چت در ربات هنوز اضافه نشده!
 
+request_answer.result: |-
+  ✅ به {{ .Succeed }} درخواست در {{ .Time }} با موفقیت پاسخ داده شد.
+  
+  اعضای چت: {{ .After }} ({{ .Differance }})
+  
+  ⚠️ از {{ .Count }} درخواست، تعداد {{ .Failed }} (%{{ .FailRatio }}) با خطا مواجه شد!
 
 # --- Errors ---
 err.chat_not_found: 💬 چت پیدا نشد؛‌ ممکن است ربات به چت اضافه نشده باشد و یا آیدی/یوزرنیم چت را به درستی وارد نکرده اید!
